--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.1.12",
     "react": "17.0.2",
     "react-native": "0.66.4",
-    "react-native-audio-recorder-player": "^3.3.3"
+    "react-native-audio-recorder-player": "^3.3.3",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
